--- a/notebooks/c10-mdfl-deploy.ipynb
+++ b/notebooks/c10-mdfl-deploy.ipynb
@@ -96,8 +96,7 @@
    "outputs": [],
    "source": [
     "# load data\n",
-    "path = '/Users/meigarom.lopes/repos/pa005_insiders_clustering/insiders_clustering/'\n",
-    "df_raw = pd.read_csv( path + 'data/raw/Ecommerce.csv' )\n",
+    "df_raw = pd.read_csv( '../data/raw/Ecommerce.csv')\n",
     "\n",
     "# drop extra column\n",
     "df_raw = df_raw.drop( columns=['Unnamed: 8'], axis=1 )"
